--- a/secciones/quienes-somos.html
+++ b/secciones/quienes-somos.html
@@ -1,66 +1,212 @@
 <!DOCTYPE html>
 <html lang="es">
-	<head>
-		<meta charset="UTF-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="../css/estilos.css">
-		<title>Lleva y trae</title>
-	</head>
 
-	<body>
-		<h1>Quienes Somos</h1>
-		<nav class="contenedor">
-			<img src="../Image/envio.png" alt="envio">
-			<ul class="menu">
-				<li><a href="../index.html">Inicio</a></li>
-				<li><a href="productos.html">Productos</a></li>
-				<li id="quienes-somos"><a href="quienes-somos.html">Quienes somos</a></li>
-				<li><a href="contacto.html">Contacto</a></li>
-				<li><a href="preguntas-frecuentes.html">Preguntas Frecuentes</a></li>
-			</ul>
-				
-			<label class="buscador">
-				<input type="search" placeholder="Necesito..."></imput>
-			</label>
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+	<link rel="stylesheet" href="../css/estilos2.css">
+	<title>Lleva y trae</title>
+</head>
 
-		</nav>
-		<h2>Sobre nosotros...</h2>
-			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum laudantium numquam asperiores, omnis consequuntur distinctio perferendis earum culpa hic error ratione eum deserunt non debitis qui quisquam cum temporibus pariatur.</p>
-		<h2>Nuestro equipo</h2>
-		<ul>
-			<li>Maria</li>
-			<li>Juan</li>
-			<li>Martin</li>
-			<li>Victoria</li>
-			<li>Esteban</li>
-			<li>Melisa</li>
-		</ul>
-		<h2>¿Como nacio Lleva y trae?</h2>
-			<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi, quia! Maiores facilis delectus facere eum, placeat cupiditate velit magni, culpa odio provident in perferendis sequi fugiat consectetur laudantium. Minus, soluta.</p>
-		<h2>Camino a los 10 años en el mercado</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit beatae quisquam reprehenderit fugiat atque fuga voluptatem iure unde, explicabo cumque libero nulla nemo facilis, delectus ratione! Qui dolore sint neque?</p>
-		<h2>Qué queremos lograr?</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum quaerat hic pariatur! Hic, excepturi labore nemo dolore esse ad saepe fugit at magnam. Eos ex, vero ipsam non officia tempora!</p>
-		<h2>Mision, Vision y Valores</h2>
-			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse fugiat voluptatibus aperiam facere tempora! Provident, nemo officiis. Enim tempore placeat natus odio perspiciatis suscipit aliquid. Ex est libero esse natus?</p>
-		<footer>
-		<h2><b>Navegación</b></h2>
-			<ul>
-				<li><a href="../index.html">Inicio</a></li>
-				<li><a href="productos.html">Productos</a></li>
-				<li><a href="quienes-somos.html">Quienes somos</a></li>
-				<li><a href="contacto.html">Contacto</a></li>
-				<li><a href="preguntas-frecuentes.html">Preguntas Frecuentes</a></li>
-			</ul>
-			<h2><b>Medios de pago</b></h2>
-			<img src="../image/img-formasdepago.png" alt="formas de pago"/>
-			<h2><b>Contactanos</b></h2>
-				<h3>+54-0291-12345678</h3>
-				<h3>LlevayTrae@gmail.com</h3>
-				<h3>Facebook: /Llevaytrae</h3>
-				<h3>Instagram: /Llevaytrae</h3>
-		</footer>
-	</body>
+<body>
 	
+
+	<nav class="navegador">
+		<div class="logo mx-auto d-block text-center d-none d-sm-none d-md-block">
+			<h1 class="fs-5 p-0 m-0 small fw-light">Quienes Somos</h1>
+			<img src="../image/envio.png" alt="envio" class="img-envio">
+		</div>
+
+		<div class="titulo">
+			<h1>Lleva y Trae</h1>
+		</div>
+
+		<div class="menu d-flex align-items-start">
+			<div class="btn-group" role="group" aria-label="Basic radio toggle button group">
+				<input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
+				<label class="btn btn-outline-dark" for="btnradio1">
+					<p>Inicio</p>
+				</label>
+
+				<input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
+				<label class="btn btn-outline-dark" for="btnradio2">
+					<p>Productos</p>
+				</label>
+
+				<input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
+				<label class="btn btn-outline-dark" for="btnradio3">
+					<p>Quienes Somos</p>
+				</label>
+
+				<input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
+				<label class="btn btn-outline-dark" for="btnradio3">
+					<p>Contacto</p>
+				</label>
+
+				<input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
+				<label class="btn btn-outline-dark" for="btnradio3">
+					<p>Preguntas Frecuentes</p>
+				</label>
+
+
+			</div>
+
+		</div>
+
+		<div class="buscador d-none d-sm-none d-md-block">
+			<label class="buscador-content">
+				<input type="search" placeholder="Necesito..." class="necesito"></imput>
+			</label>
+		</div>
+	</nav>
+
+
+	<div class="mt-3">
+		<h2 class="fw-bold text-center mt-1">Sobre nosotros...</h2>
+
+	</div>
+
+	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum laudantium numquam asperiores, omnis consequuntur
+		distinctio perferendis earum culpa hic error ratione eum deserunt non debitis qui quisquam cum temporibus
+		pariatur.
+	</p>
+
+	<div>
+		<h2 class="fw-bold text-center">Nuestro equipo</h2>
+		<p>
+			<p>
+				<hr />
+			</p>
+		</p>
+	</div>
+
+
+	<div>
+
+		
+	</div>
+
+
+	<section class="d-flex justify-content-center flex-wrap   col-12 col-sm-12" >
+
+
+		<div class="card bg-secondary mb-5 ms-5 me-5" style="width: 18rem;">
+
+			<div>
+				<p class="card-title fw-semibold text-center fs-5"> Maria</p>
+				<img src="../Image/maria.png" class="card-img-top" alt="...">
+				<div class="card-body">
+					<p class="card-text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, dolore
+						corporis! Vitae assumenda, architecto magnam eveniet modi sed iusto id.</p>
+				</div>
+			</div>
+
+
+		</div>
+
+
+		<div class="card bg-secondary mb-5 ms-5 me-5" style="width: 18rem;">
+
+			<div>
+				<div>
+					<p class="card-title fw-semibold text-center fs-5"> Juan</p>
+					<img src="../Image/maria.png" class="card-img-top" alt="...">
+					<div class="card-body ">
+						<p class="card-text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, dolore
+							corporis! Vitae assumenda, architecto magnam eveniet modi sed iusto id.</p>
+					</div>
+				</div>
+			</div>
+
+
+
+
+		</div>
+
+
+		<div class="card bg-secondary mb-5 ms-5 me-5" style="width: 18rem;">
+
+			<div>
+				<p class="card-title fw-semibold text-center fs-5"> Bruno
+				</p>
+				<img src="../Image/maria.png" class="card-img-top" alt="...">
+				<div class="card-body">
+					<p class="card-text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, dolore
+						corporis! Vitae assumenda, architecto magnam even
+				</div>
+
+				iet modi sed iusto id.</p>
+			</div>
+		</div>
+		<!-- 
+		<li>Maria</li>
+		<li>Juan</li>
+		<li>Martin</li>
+		<li>Victoria</li>
+		<li>Esteban</li>
+		<li>Melisa</li> -->
+	</section>
+
+	<div>
+
+		<h2 class="fw-bold text-center mt-5">¿Como nacio Lleva y trae?</h2>
+		<p class="border border-dark border-2 opacity-50">
+			<hr />
+		</p>
+	</div>
+	<div class="conteiner">
+		<div class="row mt-5">
+			<div class="col-6 col-sm-12">
+				<h2 class="fw-normal text-center mb-2">Camino a los 10 años en el mercado</h2>
+				<p class="mt-4"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit beatae quisquam
+					reprehenderit fugiat atque fuga
+					voluptatem iure unde, explicabo cumque libero nulla nemo facilis, delectus ratione! Qui dolore sint
+					neque?
+				</p>
+			</div>
+
+
+			<div class="col-6 col-sm-12">
+				<h2 class="fw-normal text-center mb-2">¿Qué queremos lograr?</h2>
+				<p class="mt-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum quaerat hic pariatur!
+					Hic, excepturi labore
+					nemo dolore esse ad saepe fugit at magnam. Eos ex, vero ipsam non officia tempora!</p>
+			</div>
+
+			<div class="col-12 col-sm-12">
+				<h2 class="fw-normal text-center mb-2">Mision, Vision y Valores</h2>
+				<p class="mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse fugiat voluptatibus
+					aperiam facere tempora!
+					Provident, nemo officiis. Enim tempore placeat natus odio perspiciatis suscipit aliquid. Ex est
+					libero esse
+					natus?</p>
+			</div>
+
+		</div>
+	</div>
+
+
+
+
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous">
+	</script>
+	<footer class="footer">
+		<div class="div-wpp">
+			<p class="texto-wpp">291-12345678</p>
+			<img src="../image/whatsapp.png" alt="whatsapp" class="img-wpp">
+		</div>
+		<div class="div-face">
+			<p class="texto-face">/Llevaytrae</p>
+			<img src="../image/facebook.png" alt="facebook" class="img-face">
+		</div>
+		<div class="div-insta">
+			<p class="texto-insta">/Llevaytrae</p>
+			<img src="../image/instagram.png" alt="instagram" class="img-insta">
+		</div>
+</body>
+
 </html>
