--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="css/responsive-480px.css">
 	<link rel="stylesheet" href="css/responsive-1524px.css">
 	<link rel="stylesheet" href="css/responsive-711px.css">
+	<link rel="stylesheet" href="sass/estilos-sass.css">
 
 	<title>Lleva y Trae</title>
 
