--- a/secciones/preguntas-frecuentes.html
+++ b/secciones/preguntas-frecuentes.html
@@ -8,6 +8,8 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 	<link rel="stylesheet" href="../css/estilos2.css">
+	<link rel="stylesheet" href="../sass/estilos-sass.css">
+
 	<title>Lleva y trae</title>
 </head>
 
@@ -24,29 +26,29 @@
 
 		<div class="menu d-flex align-items-center">
 			<div class="btn-group" role="group" aria-label="Basic radio toggle button group">
-				<input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
+				<input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off">
 				<label class="btn btn-outline-dark" for="btnradio1">
-					<p>Inicio</p>
+					<a href="../index.html">Inicio </a>
 				</label>
 
 				<input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
 				<label class="btn btn-outline-dark" for="btnradio2">
-					<p>Productos</p>
+					<a href="productos.html">Productos </a>
 				</label>
 
 				<input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
 				<label class="btn btn-outline-dark" for="btnradio3">
-					<p>Quienes Somos</p>
+					<a href="quienes-somos.html">Quienes Somos </a>
 				</label>
 
 				<input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
 				<label class="btn btn-outline-dark" for="btnradio3">
-					<p>Contacto</p>
+					<a href="contacto.html">Contacto </a>
 				</label>
 
-				<input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
+				<input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off" checked>
 				<label class="btn btn-outline-dark" for="btnradio3">
-					<p>Preguntas Frecuentes</p>
+					<a href="preguntas-frecuentes.html">Preguntas Frecuentes</a>
 				</label>
 
 
@@ -73,7 +75,8 @@
 						<hr />
 					</p>
 				</p>
-				<p class="m-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum laudantium numquam asperiores,
+				<p class="m-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum laudantium numquam
+					asperiores,
 					omnis consequuntur
 					distinctio perferendis earum culpa hic error ratione eum deserunt non debitis qui quisquam cum
 					temporibus
@@ -81,7 +84,7 @@
 				</p>
 			</div>
 
-			
+
 
 			<div class="mt-3 mb-2 col-12 col-md-6 col-lg-4">
 				<h2 class="fw-bold text-center mb-4">Contrata garantia +Plus duarente 1 año</h2>
@@ -93,11 +96,12 @@
 
 				<p class="m-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem adipisci odio atque
 					reiciendis iusto, natus
-					eos eligendi tenetur dolores sed sapiente, sunt aspernatur optio beatae ducimus qui quos enim. Quidem.
+					eos eligendi tenetur dolores sed sapiente, sunt aspernatur optio beatae ducimus qui quos enim.
+					Quidem.
 				</p>
 			</div>
 
-			
+
 			<div class="mt-3 mb-2 col-12 col-lg-4">
 				<h2 class="fw-bold text-center mb-4">Si mi pedido no llego ¿Que hago?</h2>
 				<p>
@@ -108,14 +112,15 @@
 
 				<p class="m-p">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi, quia! Maiores facilis
 					delectus facere eum,
-					placeat cupiditate velit magni, culpa odio provident in perferendis sequi fugiat consectetur laudantium.
+					placeat cupiditate velit magni, culpa odio provident in perferendis sequi fugiat consectetur
+					laudantium.
 					Minus,
 					soluta.
 				</p>
-	
+
 			</div>
 
-			
+
 			<div class="mt-3 mb-2 col-12 col-md-6 col-lg-4">
 				<h2 class="fw-bold text-center mb-4">¿Cuanto tiempo debo esperar antes de iniciar el reclamo?</h2>
 				<p>
@@ -124,13 +129,14 @@
 					</p>
 				</p>
 
-				<p class="m-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit beatae quisquam reprehenderit
+				<p class="m-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit beatae quisquam
+					reprehenderit
 					fugiat atque fuga
 					voluptatem iure unde, explicabo cumque libero nulla nemo facilis, delectus ratione! Qui dolore sint
 					neque?</p>
 			</div>
 
-			
+
 
 			<div class="mt-3 mb-2 col-12 col-md-6 col-lg-6">
 				<h2 class="fw-bold text-center mb-4">¿Ya esta disponible la opcion de pago con Criptomonedas?</h2>
@@ -140,20 +146,21 @@
 					</p>
 				</p>
 
-				<p class="m-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum quaerat hic pariatur! Hic,
+				<p class="m-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum quaerat hic pariatur!
+					Hic,
 					excepturi labore
 					nemo dolore esse ad saepe fugit at magnam. Eos ex, vero ipsam non officia tempora!
 				</p>
-				
+
 			</div>
 
-			
+
 			<div class="mt-3 mb-2 d-none d-sm-none d-md-none d-lg-flex col-lg-6 div-img-cripto">
 				<img class="img-cripto" src="../image/criptomoneda.png" alt="criptomonedas">
-				
+
 			</div>
 
-			
+
 
 			<div class="mt-3 mb-2 col-12">
 				<h2 class="fw-bold text-center">¿Te gustaria sumarte al equipo de <b>LLeva y Trae</b>?</h2>
@@ -165,7 +172,8 @@
 
 				<p class="m-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse fugiat voluptatibus aperiam
 					facere tempora!
-					Provident, nemo officiis. Enim tempore placeat natus odio perspiciatis suscipit aliquid. Ex est libero
+					Provident, nemo officiis. Enim tempore placeat natus odio perspiciatis suscipit aliquid. Ex est
+					libero
 					esse
 					natus?
 				</p>
@@ -173,7 +181,7 @@
 
 
 
-			
+
 
 
 		</div>
@@ -193,7 +201,7 @@
 			<p class="texto-insta">/Llevaytrae</p>
 			<img src="../image/instagram.png" alt="instagram" class="img-insta">
 		</div>
-	</footer>	
+	</footer>
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous">
