--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -8,6 +8,7 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 	<link rel="stylesheet" href="../css/estilos2.css">
+	<link rel="stylesheet" href="../sass/estilos-sass.css">
 	<title>Lleva y trae</title>
 </head>
 
@@ -26,29 +27,29 @@
 
 		<div class="menu d-flex align-items-center">
 			<div class="btn-group" role="group" aria-label="Basic radio toggle button group">
-				<input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
+				<input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off">
 				<label class="btn btn-outline-dark" for="btnradio1">
-					<p>Inicio</p>
+					<a href="../index.html">Inicio </a>
 				</label>
 
-				<input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
+				<input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off" checked>
 				<label class="btn btn-outline-dark" for="btnradio2">
-					<p>Productos</p>
+					<a href="productos.html">Productos </a>
 				</label>
 
 				<input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
 				<label class="btn btn-outline-dark" for="btnradio3">
-					<p>Quienes Somos</p>
+					<a href="quienes-somos.html">Quienes Somos </a>
 				</label>
 
 				<input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
 				<label class="btn btn-outline-dark" for="btnradio3">
-					<p>Contacto</p>
+					<a href="contacto.html">Contacto </a>
 				</label>
 
 				<input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
 				<label class="btn btn-outline-dark" for="btnradio3">
-					<p>Preguntas Frecuentes</p>
+					<a href="preguntas-frecuentes.html">Preguntas Frecuentes</a>
 				</label>
 
 
