--- a/secciones/quienes-somos.html
+++ b/secciones/quienes-somos.html
@@ -7,12 +7,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+	<link rel="stylesheet" href="../sass/estilos-sass.css">
 	<link rel="stylesheet" href="../css/estilos2.css">
+
 	<title>Lleva y trae</title>
 </head>
 
 <body>
-	
+
 
 	<nav class="navegador">
 		<div class="logo mx-auto d-block text-center d-none d-sm-none d-md-block">
@@ -26,29 +28,29 @@
 
 		<div class="menu d-flex align-items-center">
 			<div class="btn-group" role="group" aria-label="Basic radio toggle button group">
-				<input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
+				<input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off">
 				<label class="btn btn-outline-dark" for="btnradio1">
-					<p>Inicio</p>
+					<a href="../index.html">Inicio </a>
 				</label>
 
 				<input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
 				<label class="btn btn-outline-dark" for="btnradio2">
-					<p>Productos</p>
+					<a href="productos.html">Productos </a>
+				</label>
+
+				<input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off" checked>
+				<label class="btn btn-outline-dark" for="btnradio3">
+					<a href="quienes-somos.html">Quienes Somos </a>
 				</label>
 
 				<input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
 				<label class="btn btn-outline-dark" for="btnradio3">
-					<p>Quienes Somos</p>
+					<a href="contacto.html">Contacto </a>
 				</label>
 
 				<input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
 				<label class="btn btn-outline-dark" for="btnradio3">
-					<p>Contacto</p>
-				</label>
-
-				<input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
-				<label class="btn btn-outline-dark" for="btnradio3">
-					<p>Preguntas Frecuentes</p>
+					<a href="preguntas-frecuentes.html">Preguntas Frecuentes</a>
 				</label>
 
 
@@ -68,7 +70,8 @@
 		<h2 class="fw-bold text-center mt-1">Sobre nosotros...</h2>
 	</div>
 
-	<p class="m-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum laudantium numquam asperiores, omnis consequuntur
+	<p class="m-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum laudantium numquam asperiores, omnis
+		consequuntur
 		distinctio perferendis earum culpa hic error ratione eum deserunt non debitis qui quisquam cum temporibus
 		pariatur.
 	</p>
@@ -85,11 +88,11 @@
 
 	<div>
 
-		
+
 	</div>
 
 
-	<section class="d-flex justify-content-center flex-wrap   col-12 col-sm-12" >
+	<section class="d-flex justify-content-center flex-wrap   col-12 col-sm-12">
 
 
 		<div class="card bg-secondary mb-5 ms-5 me-5" style="width: 18rem;">
@@ -171,7 +174,8 @@
 
 			<div class="col-6 col-sm-12">
 				<h2 class="fw-normal text-center mb-2">¿Qué queremos lograr?</h2>
-				<p class="mt-4 m-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum quaerat hic pariatur!
+				<p class="mt-4 m-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum quaerat hic
+					pariatur!
 					Hic, excepturi labore
 					nemo dolore esse ad saepe fugit at magnam. Eos ex, vero ipsam non officia tempora!</p>
 			</div>
@@ -191,7 +195,7 @@
 
 
 
-	
+
 	<footer class="footer">
 		<div class="div-wpp">
 			<p class="texto-wpp">291-12345678</p>
@@ -205,7 +209,7 @@
 			<p class="texto-insta">/Llevaytrae</p>
 			<img src="../image/instagram.png" alt="instagram" class="img-insta">
 		</div>
-	</footer>	
+	</footer>
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous">
