incluyendo SEO y correciones

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/estilos2.css">
+	<meta name="keywords" content="busca, compra, encontra">
+	<meta name="description" content="Encontra en nuestra pagina, todos los productos que hacen a tu felicidad">
+	<!-- <link rel="stylesheet" href="css/estilos2.css"> -->
 	<link rel="stylesheet" href="css/responsive-480px.css">
 	<link rel="stylesheet" href="css/responsive-1524px.css">
 	<link rel="stylesheet" href="css/responsive-711px.css">
@@ -14,13 +16,14 @@
 	<title>Lleva y Trae</title>
 
 </head>
+
 <div>
 
 	<body>
 
 		<nav class="navegador">
 			<div class="logo">
-				<img src="image/envio.png" alt="envio" class="img-envio">
+				<img src="image/envio.png" alt="envio" title="imagen-envios" class="img-envio">
 			</div>
 
 			<div class="titulo">
@@ -48,7 +51,7 @@
 
 
 			<div class="titulo-categoria">
-				<h2> <p> Categorias </p></h2>
+				<h2> Categorias</h2>
 			</div>
 
 			<div class="categorias">
@@ -71,7 +74,7 @@
 			</div>
 
 			<div class="img-envio-gratis">
-				<img src="Image/envio-gratis.png" alt="envio-gratis">
+				<img src="Image/envio-gratis.png" title="envios-gratis" alt="envio-gratis">
 			</div>
 
 			<div class="texto-envios-gratis">
@@ -82,7 +85,7 @@
 			</div>
 
 			<div class="img-devolucion">
-				<img src="image/devolucion.png" alt="devolucion">
+				<img src="image/devolucion.png" title="devolucion" alt="devolucion">
 			</div>
 
 			<div class="texto-devolucion">
@@ -92,7 +95,7 @@
 			</div>
 
 			<div class="img-garantia">
-				<img src="image/garantia.png" alt="garantia">
+				<img src="image/garantia.png" title="garantia" alt="garantia">
 			</div>
 
 			<div class="texto-garantia">
@@ -102,7 +105,7 @@
 			</div>
 
 			<div class="img-seguridad">
-				<img src="image/seguridad.png" alt="seguridad">
+				<img src="image/seguridad.png" title="seguridad" alt="seguridad">
 			</div>
 
 			<div class="texto-seguridad">
@@ -124,35 +127,28 @@
 			</div> -->
 
 			<div class="img-tarjetas">
-				<div>
-					<p><br></p>
-				</div>
-				<img src="image/tarjetas-de-credito.png" alt="tarjetas">
+				<img src="image/tarjetas-de-credito.png" title="tarjetas" alt="tarjetas">
 				<p> Trabajamos con todas las tarjetas</p>
 			</div>
 
 			<div class="img-criptomonedas">
-				<div>
-					<p><br></p>
-				</div>
-				<img src="image/criptomoneda.png" alt="criptomonedas">
+				<img src="image/criptomoneda.png" title="criptomonedas" alt="criptomonedas">
 				<p>Aceptamos BTC, ETH y stable-coins</p>
 			</div>
-
 		</main>
 
 		<footer class="footer">
 			<div class="div-wpp">
 				<p class="texto-wpp">291-12345678</p>
-				<img src="image/whatsapp.png" alt="whatsapp" class="img-wpp">
+				<img src="image/whatsapp.png" alt="whatsapp" title="whatsapp" class="img-wpp">
 			</div>
 			<div class="div-face">
 				<p class="texto-face">/Llevaytrae</p>
-				<img src="image/facebook.png" alt="facebook" class="img-face">
+				<img src="image/facebook.png" alt="facebook" title="facebook" class="img-face">
 			</div>
 			<div class="div-insta">
 				<p class="texto-insta">/Llevaytrae</p> 
-				<img src="image/instagram.png" alt="instagram" class="img-insta">
+				<img src="image/instagram.png" alt="instagram" title="instagram" class="img-insta">
 			</div>
 		</footer>
 	</body>
