--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -5,9 +5,11 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="keywords" content="concatate, conocenos">
+	<meta name="description" content="Encontra en nuestra pagina, todos los productos que hacen a tu felicidad">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-	<link rel="stylesheet" href="../css/estilos2.css">
+	<!-- <link rel="stylesheet" href="../css/estilos2.css"> -->
 	<link rel="stylesheet" href="../sass/estilos-sass.css">
 	<title>Lleva y trae</title>
 </head>
@@ -17,11 +19,11 @@
 	<nav class="navegador">
 		<div class="logo mx-auto d-block text-center d-none d-sm-none d-md-block">
 			<h1 class="fs-5 p-0 m-0 small fw-light">Contacto</h1>
-			<img src="../Image/envio.png" alt="envio" class="img-envio">
+			<img src="../Image/envio.png" alt="envio" title="envios" class="img-envio">
 		</div>
 
 		<div class="titulo">
-			<h1>Lleva y Trae</h1>
+			<p>Lleva y Trae</p>
 		</div>
 
 
@@ -52,10 +54,7 @@
 				<label class="btn btn-outline-dark" for="btnradio3">
 					<a href="preguntas-frecuentes.html">Preguntas Frecuentes</a>
 				</label>
-
-
 			</div>
-
 		</div>
 
 		<div class="buscador d-none d-sm-none d-md-block">
@@ -63,7 +62,6 @@
 				<input type="search" placeholder="Necesito..." class="necesito mt-3"></imput>
 			</label>
 		</div>
-
 	</nav>
 
 	<main>
@@ -141,34 +139,25 @@
 
 					<div class="d-flex justify-content-center">
 						<button type="button" class="btn btn-secondary ">Enviar</button>
-					</div>
-		
-
+					</div>		
 				</div>
-
-		
-
-
 			</div>
-
-			>
 		</div>
-
 	</main>
 
 
 	<footer class="footer">
 		<div class="div-wpp">
 			<p class="texto-wpp">291-12345678</p>
-			<img src="../image/whatsapp.png" alt="whatsapp" class="img-wpp">
+			<img src="../image/whatsapp.png" alt="whatsapp" title="whatsapp" class="img-wpp">
 		</div>
 		<div class="div-face">
 			<p class="texto-face">/Llevaytrae</p>
-			<img src="../image/facebook.png" alt="facebook" class="img-face">
+			<img src="../image/facebook.png" alt="facebook" title="facebook" class="img-face">
 		</div>
 		<div class="div-insta">
 			<p class="texto-insta">/Llevaytrae</p> 
-			<img src="../image/instagram.png" alt="instagram" class="img-insta">
+			<img src="../image/instagram.png" alt="instagram" title="instagram" class="img-insta">
 		</div>
 	</footer>
 
