--- a/secciones/preguntas-frecuentes.html
+++ b/secciones/preguntas-frecuentes.html
@@ -5,9 +5,11 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="keywords" content="conocenos, preguntas, frecuentes">
+	<meta name="description" content="Encontra en nuestra pagina, todos los productos que hacen a tu felicidad">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-	<link rel="stylesheet" href="../css/estilos2.css">
+	<!-- <link rel="stylesheet" href="../css/estilos2.css"> -->
 	<link rel="stylesheet" href="../sass/estilos-sass.css">
 
 	<title>Lleva y trae</title>
@@ -17,7 +19,7 @@
 	<nav class="navegador">
 		<div class="logo mx-auto d-block text-center d-none d-sm-none d-md-block">
 			<h1 class="fs-5 p-0 m-0 small fw-light">Preguntas Frecuentes</h1>
-			<img src="../Image/envio.png" alt="envio" class="img-envio">
+			<img src="../Image/envio.png" alt="envio" title="envio" class="img-envio">
 		</div>
 
 		<div class="titulo">
@@ -50,10 +52,7 @@
 				<label class="btn btn-outline-dark" for="btnradio3">
 					<a href="preguntas-frecuentes.html">Preguntas Frecuentes</a>
 				</label>
-
-
 			</div>
-
 		</div>
 
 		<div class="buscador d-none d-sm-none d-md-block">
@@ -70,11 +69,7 @@
 
 			<div class="mt-3 mb-2 col-12 col-md-6 col-lg-12">
 				<h2 class="fw-bold text-center mt-1">¿Todos los productos cuentan con garantia?</h2>
-				<p>
-					<p>
-						<hr />
-					</p>
-				</p>
+				
 				<p class="m-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum laudantium numquam
 					asperiores,
 					omnis consequuntur
@@ -84,16 +79,8 @@
 				</p>
 			</div>
 
-
-
 			<div class="mt-3 mb-2 col-12 col-md-6 col-lg-4">
 				<h2 class="fw-bold text-center mb-4">Contrata garantia +Plus duarente 1 año</h2>
-				<p>
-					<p>
-						<hr />
-					</p>
-				</p>
-
 				<p class="m-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem adipisci odio atque
 					reiciendis iusto, natus
 					eos eligendi tenetur dolores sed sapiente, sunt aspernatur optio beatae ducimus qui quos enim.
@@ -101,15 +88,8 @@
 				</p>
 			</div>
 
-
 			<div class="mt-3 mb-2 col-12 col-lg-4">
 				<h2 class="fw-bold text-center mb-4">Si mi pedido no llego ¿Que hago?</h2>
-				<p>
-					<p>
-						<hr />
-					</p>
-				</p>
-
 				<p class="m-p">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi, quia! Maiores facilis
 					delectus facere eum,
 					placeat cupiditate velit magni, culpa odio provident in perferendis sequi fugiat consectetur
@@ -117,18 +97,10 @@
 					Minus,
 					soluta.
 				</p>
-
 			</div>
-
 
 			<div class="mt-3 mb-2 col-12 col-md-6 col-lg-4">
 				<h2 class="fw-bold text-center mb-4">¿Cuanto tiempo debo esperar antes de iniciar el reclamo?</h2>
-				<p>
-					<p>
-						<hr />
-					</p>
-				</p>
-
 				<p class="m-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit beatae quisquam
 					reprehenderit
 					fugiat atque fuga
@@ -136,40 +108,21 @@
 					neque?</p>
 			</div>
 
-
-
 			<div class="mt-3 mb-2 col-12 col-md-6 col-lg-6">
 				<h2 class="fw-bold text-center mb-4">¿Ya esta disponible la opcion de pago con Criptomonedas?</h2>
-				<p>
-					<p>
-						<hr />
-					</p>
-				</p>
-
 				<p class="m-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum quaerat hic pariatur!
 					Hic,
 					excepturi labore
 					nemo dolore esse ad saepe fugit at magnam. Eos ex, vero ipsam non officia tempora!
 				</p>
-
 			</div>
-
 
 			<div class="mt-3 mb-2 d-none d-sm-none d-md-none d-lg-flex col-lg-6 div-img-cripto">
 				<img class="img-cripto" src="../image/criptomoneda.png" alt="criptomonedas">
-
 			</div>
-
-
 
 			<div class="mt-3 mb-2 col-12">
 				<h2 class="fw-bold text-center">¿Te gustaria sumarte al equipo de <b>LLeva y Trae</b>?</h2>
-				<p>
-					<p>
-						<hr />
-					</p>
-				</p>
-
 				<p class="m-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse fugiat voluptatibus aperiam
 					facere tempora!
 					Provident, nemo officiis. Enim tempore placeat natus odio perspiciatis suscipit aliquid. Ex est
@@ -178,12 +131,6 @@
 					natus?
 				</p>
 			</div>
-
-
-
-
-
-
 		</div>
 	</div>
 
@@ -191,15 +138,15 @@
 	<footer class="footer">
 		<div class="div-wpp">
 			<p class="texto-wpp">291-12345678</p>
-			<img src="../image/whatsapp.png" alt="whatsapp" class="img-wpp">
+			<img src="../image/whatsapp.png" alt="whatsapp" title="whatsapp" class="img-wpp">
 		</div>
 		<div class="div-face">
 			<p class="texto-face">/Llevaytrae</p>
-			<img src="../image/facebook.png" alt="facebook" class="img-face">
+			<img src="../image/facebook.png" alt="facebook" title="facebook" class="img-face">
 		</div>
 		<div class="div-insta">
 			<p class="texto-insta">/Llevaytrae</p>
-			<img src="../image/instagram.png" alt="instagram" class="img-insta">
+			<img src="../image/instagram.png" alt="instagram" title="instagram" class="img-insta">
 		</div>
 	</footer>
 
