--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -5,9 +5,11 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="keywords" content="productos, ofertas, hotsale">
+	<meta name="description" content="Encontra en nuestra pagina, todos los productos que hacen a tu felicidad">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-	<link rel="stylesheet" href="../css/estilos2.css">
+	<!-- <link rel="stylesheet" href="../css/estilos2.css"> -->
 	<link rel="stylesheet" href="../sass/estilos-sass.css">
 	<title>Lleva y trae</title>
 </head>
@@ -17,11 +19,11 @@
 	<nav class="navegador">
 		<div class="logo mx-auto d-block text-center d-none d-sm-none d-md-block">
 			<h1 class="fs-5 p-0 m-0 small fw-light">Productos</h1>
-			<img src="../image/envio.png" alt="envio" class="img-envio">
+			<img src="../image/envio.png" alt="envio" title="envio" class="img-envio">
 		</div>
 
 		<div class="titulo">
-			<h1>Lleva y Trae</h1>
+			<p>Lleva y Trae</p>
 		</div>
 
 
@@ -51,10 +53,7 @@
 				<label class="btn btn-outline-dark" for="btnradio3">
 					<a href="preguntas-frecuentes.html">Preguntas Frecuentes</a>
 				</label>
-
-
 			</div>
-
 		</div>
 
 		<div class="buscador d-none d-sm-none d-md-block">
@@ -64,14 +63,11 @@
 		</div>
 	</nav>
 
-
-
 	<main class="grid-main-productos">
-
 
 		<div class="titulo-categoria mt-4 d-none d-sm-none d-md-none d-lg-flex justify-content-center">
 			<h2 class="my-5">
-				<p> Categorias </p>
+				 Categorias
 			</h2>
 		</div>
 
@@ -96,11 +92,11 @@
 				<div class="card mb-3 productos-area" style="max-width: 540px;">
 					<div class="row g-0">
 						<div class="col-md-4 d-flex align-items-center">
-							<img src="../Image/gamer.jpg" class="img-fluid rounded-start" alt="...">
+							<img src="../Image/gamer.jpg" class="img-fluid rounded-start" title="silla-gamer" alt="silla-gamer">
 						</div>
 						<div class="col-md-8">
 							<div class="card-body">
-								<h5 class="card-title">Silla Gamer</h5>
+								<h4 class="card-title">Silla Gamer</h4>
 								<p class="card-text">Jugá sin límites
 									Diseñada para quienes pasan muchas horas frente a la computadora. El asiento y el
 									respaldo se adaptan a tus diferentes posiciones a lo largo del juego.</p>
@@ -118,11 +114,11 @@
 				<div class="card mb-3 productos-area" style="max-width: 540px;">
 					<div class="row g-0">
 						<div class="col-md-4 d-flex align-items-center">
-							<img src="../Image/pava.jpg" class="img-fluid rounded-start" alt="...">
+							<img src="../Image/pava.jpg" class="img-fluid rounded-start" title="pava" alt="pava">
 						</div>
 						<div class="col-md-8">
 							<div class="card-body">
-								<h5 class="card-title">Pava Electrica</h5>
+								<h4 class="card-title">Pava Electrica</h4>
 								<p class="card-text">¡Tené el agua caliente siempre lista! Con la pava eléctrica Liliana
 									AP975 vas a poder disfrutar de una bebida caliente en minutos. Ganá tiempo y prepará
 									ese mate, cafecito o porqué no, esa sopa instantánea que tanto te gusta.</p>
@@ -140,11 +136,11 @@
 				<div class="card mb-3 productos-area" style="max-width: 540px;">
 					<div class="row g-0">
 						<div class="col-md-4 d-flex align-items-center">
-							<img src="../Image/sillon.jpg" class="img-fluid rounded-start" alt="...">
+							<img src="../Image/sillon.jpg" class="img-fluid rounded-start" title="sillon" alt="sillon">
 						</div>
 						<div class="col-md-8">
 							<div class="card-body">
-								<h5 class="card-title">Sillon</h5>
+								<h4 class="card-title">Sillon</h4>
 								<p class="card-text">Hermoso diseño clásico capitoné. Elegante y robusto.
 									Elegí el diseño que mas te guste. Podes combinar las tachas (colores) y las patas de
 									madera (color de lustre)</p>
@@ -161,11 +157,11 @@
 				<div class="card mb-3 productos-area" style="max-width: 540px;">
 					<div class="row g-0">
 						<div class="col-md-4 d-flex align-items-center">
-							<img src="../Image/notebook.png" class="img-fluid rounded-start" alt="...">
+							<img src="../Image/notebook.png" class="img-fluid rounded-start" title="notebook" alt="notebook">
 						</div>
 						<div class="col-md-8">
 							<div class="card-body">
-								<h5 class="card-title">Notebook Sony</h5>
+								<h4 class="card-title">Notebook Sony</h4>
 								<p class="card-text">Diseño compacto, ligero y minimalista.
 									Diseñada al detalle para poder
 									transportarla y disfrutarla fácilmente.
@@ -188,11 +184,11 @@
 				<div class="card mb-3 productos-area" style="max-width: 540px;">
 					<div class="row g-0">
 						<div class="col-md-4 d-flex align-items-center">
-							<img src="../Image/tv2.jpg" class="img-fluid rounded-start" alt="...">
+							<img src="../Image/tv2.jpg" class="img-fluid rounded-start" title="tv" alt="tv">
 						</div>
 						<div class="col-md-8">
 							<div class="card-body">
-								<h5 class="card-title">Televisor Samsung 50´ 4k Full Hd</h5>
+								<h4 class="card-title">Televisor Samsung 50´ 4k Full Hd</h4>
 								<p class="card-text">Viví en 4K
 									La cantidad de pixeles que ofrece es 4 veces mayor que la Full HD, ¿el resultado?
 									Escenas mucho más realistas y con un nivel de detalle increíble. Ahora vas a conocer
@@ -206,30 +202,22 @@
 						</div>
 					</div>
 				</div>
-
-
-
-
-
 			</div>
-
 		</div>
-
-
 	</main>
 
 	<footer class="footer">
 		<div class="div-wpp">
 			<p class="texto-wpp">291-12345678</p>
-			<img src="../image/whatsapp.png" alt="whatsapp" class="img-wpp">
+			<img src="../image/whatsapp.png" alt="whatsapp" title="whatsapp" class="img-wpp">
 		</div>
 		<div class="div-face">
 			<p class="texto-face">/Llevaytrae</p>
-			<img src="../image/facebook.png" alt="facebook" class="img-face">
+			<img src="../image/facebook.png" alt="facebook" title="facbook" class="img-face">
 		</div>
 		<div class="div-insta">
 			<p class="texto-insta">/Llevaytrae</p> 
-			<img src="../image/instagram.png" alt="instagram" class="img-insta">
+			<img src="../image/instagram.png" alt="instagram" title="instagram" class="img-insta">
 		</div>
 	</footer>
 
