--- a/secciones/quienes-somos.html
+++ b/secciones/quienes-somos.html
@@ -5,10 +5,12 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="keywords" content="conocenos, preguntanos, contactate">
+	<meta name="description" content="Encontra en nuestra pagina, todos los productos que hacen a tu felicidad">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 	<link rel="stylesheet" href="../sass/estilos-sass.css">
-	<link rel="stylesheet" href="../css/estilos2.css">
+	<!-- <link rel="stylesheet" href="../css/estilos2.css"> -->
 
 	<title>Lleva y trae</title>
 </head>
@@ -19,11 +21,11 @@
 	<nav class="navegador">
 		<div class="logo mx-auto d-block text-center d-none d-sm-none d-md-block">
 			<h1 class="fs-5 p-0 m-0 small fw-light">Quienes Somos</h1>
-			<img src="../image/envio.png" alt="envio" class="img-envio">
+			<img src="../image/envio.png" alt="envio" title="envio" class="img-envio">
 		</div>
 
 		<div class="titulo">
-			<h1>Lleva y Trae</h1>
+			<p>Lleva y Trae<p>
 		</div>
 
 		<div class="menu d-flex align-items-center">
@@ -52,10 +54,7 @@
 				<label class="btn btn-outline-dark" for="btnradio3">
 					<a href="preguntas-frecuentes.html">Preguntas Frecuentes</a>
 				</label>
-
-
 			</div>
-
 		</div>
 
 		<div class="buscador d-none d-sm-none d-md-block">
@@ -78,63 +77,42 @@
 
 	<div>
 		<h2 class="fw-bold text-center">Nuestro equipo</h2>
-		<p>
-			<p>
-				<hr />
-			</p>
-		</p>
 	</div>
-
-
-	<div>
-
-
-	</div>
-
 
 	<section class="d-flex justify-content-center flex-wrap   col-12 col-sm-12">
 
 
 		<div class="card bg-secondary mb-5 ms-5 me-5" style="width: 18rem;">
-
 			<div>
 				<p class="card-title fw-semibold text-center fs-5"> Maria</p>
-				<img src="../Image/maria.png" class="card-img-top" alt="...">
+				<img src="../Image/maria.png" class="card-img-top" title="maria-card" alt="maria-card">
 				<div class="card-body">
 					<p class="card-text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, dolore
 						corporis! Vitae assumenda, architecto magnam eveniet modi sed iusto id.</p>
 				</div>
 			</div>
-
-
 		</div>
 
 
 		<div class="card bg-secondary mb-5 ms-5 me-5" style="width: 18rem;">
-
 			<div>
 				<div>
 					<p class="card-title fw-semibold text-center fs-5"> Juan</p>
-					<img src="../Image/maria.png" class="card-img-top" alt="...">
+					<img src="../Image/maria.png" class="card-img-top" title="juan-card" alt="juan-card">
 					<div class="card-body ">
 						<p class="card-text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, dolore
 							corporis! Vitae assumenda, architecto magnam eveniet modi sed iusto id.</p>
 					</div>
 				</div>
 			</div>
-
-
-
-
 		</div>
-
 
 		<div class="card bg-secondary mb-5 ms-5 me-5" style="width: 18rem;">
 
 			<div>
 				<p class="card-title fw-semibold text-center fs-5"> Bruno
 				</p>
-				<img src="../Image/maria.png" class="card-img-top" alt="...">
+				<img src="../Image/maria.png" class="card-img-top" title="bruno-card" alt="bruno-card">
 				<div class="card-body">
 					<p class="card-text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, dolore
 						corporis! Vitae assumenda, architecto magnam even
@@ -143,27 +121,16 @@
 				iet modi sed iusto id.</p>
 			</div>
 		</div>
-		<!-- 
-		<li>Maria</li>
-		<li>Juan</li>
-		<li>Martin</li>
-		<li>Victoria</li>
-		<li>Esteban</li>
-		<li>Melisa</li> -->
 	</section>
 
 	<div>
-
 		<h2 class="fw-bold text-center mt-5">¿Como nacio Lleva y trae?</h2>
-		<p class="border border-dark border-2 opacity-50">
-			<hr />
-		</p>
 	</div>
 
 	<div class="conteiner">
 		<div class="row mt-5">
 			<div class="col-6 col-sm-12">
-				<h2 class="fw-normal text-center mb-2">Camino a los 10 años en el mercado</h2>
+				<h3 class="fw-normal text-center mb-2">Camino a los 10 años en el mercado</h3>
 				<p class="mt-4 m-p"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit beatae quisquam
 					reprehenderit fugiat atque fuga
 					voluptatem iure unde, explicabo cumque libero nulla nemo facilis, delectus ratione! Qui dolore sint
@@ -173,7 +140,7 @@
 
 
 			<div class="col-6 col-sm-12">
-				<h2 class="fw-normal text-center mb-2">¿Qué queremos lograr?</h2>
+				<h3 class="fw-normal text-center mb-2">¿Qué queremos lograr?</h3>
 				<p class="mt-4 m-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum quaerat hic
 					pariatur!
 					Hic, excepturi labore
@@ -181,7 +148,7 @@
 			</div>
 
 			<div class="col-12 col-sm-12">
-				<h2 class="fw-normal text-center mb-2">Mision, Vision y Valores</h2>
+				<h3 class="fw-normal text-center mb-2">Mision, Vision y Valores</h3>
 				<p class="mt-4 m-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse fugiat voluptatibus
 					aperiam facere tempora!
 					Provident, nemo officiis. Enim tempore placeat natus odio perspiciatis suscipit aliquid. Ex est
@@ -192,22 +159,18 @@
 		</div>
 	</div>
 
-
-
-
-
 	<footer class="footer">
 		<div class="div-wpp">
 			<p class="texto-wpp">291-12345678</p>
-			<img src="../image/whatsapp.png" alt="whatsapp" class="img-wpp">
+			<img src="../image/whatsapp.png" alt="whatsapp" title="whatsapp" class="img-wpp">
 		</div>
 		<div class="div-face">
 			<p class="texto-face">/Llevaytrae</p>
-			<img src="../image/facebook.png" alt="facebook" class="img-face">
+			<img src="../image/facebook.png" alt="facebook" title="faacebook" class="img-face">
 		</div>
 		<div class="div-insta">
 			<p class="texto-insta">/Llevaytrae</p>
-			<img src="../image/instagram.png" alt="instagram" class="img-insta">
+			<img src="../image/instagram.png" alt="instagram" title="instagram" class="img-insta">
 		</div>
 	</footer>
 
