--- a/secciones/quienes-somos.html
+++ b/secciones/quienes-somos.html
@@ -5,8 +5,13 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="keywords" content="conocenos, preguntanos, contactate">
+	<meta name="description" content="Encontra en nuestra pagina, todos los productos que hacen a tu felicidad">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+		<link rel="stylesheet" href="css/responsive-480px.css">
+	<link rel="stylesheet" href="css/responsive-1524px.css">
+	<link rel="stylesheet" href="css/responsive-711px.css">
 	<link rel="stylesheet" href="../css/estilos2.css">
 	<title>Lleva y trae</title>
 </head>
@@ -17,43 +22,40 @@
 	<nav class="navegador">
 		<div class="logo mx-auto d-block text-center d-none d-sm-none d-md-block">
 			<h1 class="fs-5 p-0 m-0 small fw-light">Quienes Somos</h1>
-			<img src="../image/envio.png" alt="envio" class="img-envio">
+			<a href="../index.html"><img src="../image/envio.png" title="envio" alt="envio" class="img-envio"></a> 
 		</div>
 
 		<div class="titulo">
-			<h1>Lleva y Trae</h1>
+			<h2>Lleva y Trae</h2>
 		</div>
 
 		<div class="menu d-flex align-items-center">
 			<div class="btn-group" role="group" aria-label="Basic radio toggle button group">
-				<input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
+				<input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off">
 				<label class="btn btn-outline-dark" for="btnradio1">
-					<p>Inicio</p>
+					<a href="../index.html" class="text-decoration-none text-reset">Inicio </a>
 				</label>
 
 				<input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
 				<label class="btn btn-outline-dark" for="btnradio2">
-					<p>Productos</p>
+					<a href="productos.html" class="text-decoration-none text-reset">Productos </a>
+				</label>
+
+				<input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off" checked>
+				<label class="btn btn-outline-dark" for="btnradio3">
+					<a href="quienes-somos.html" class="text-decoration-none text-reset">Quienes Somos </a>
 				</label>
 
 				<input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
 				<label class="btn btn-outline-dark" for="btnradio3">
-					<p>Quienes Somos</p>
+					<a href="contacto.html" class="text-decoration-none text-reset">Contacto </a>
 				</label>
 
 				<input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
 				<label class="btn btn-outline-dark" for="btnradio3">
-					<p>Contacto</p>
+					<a href="preguntas-frecuentes.html" class="text-decoration-none text-reset">Preguntas Frecuentes</a>
 				</label>
-
-				<input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
-				<label class="btn btn-outline-dark" for="btnradio3">
-					<p>Preguntas Frecuentes</p>
-				</label>
-
-
 			</div>
-
 		</div>
 
 		<div class="buscador d-none d-sm-none d-md-block">
@@ -68,26 +70,18 @@
 		<h2 class="fw-bold text-center mt-1">Sobre nosotros...</h2>
 	</div>
 
-	<p class="m-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum laudantium numquam asperiores, omnis consequuntur
-		distinctio perferendis earum culpa hic error ratione eum deserunt non debitis qui quisquam cum temporibus
-		pariatur.
+	<p class="m-p">LLeva y Trae es un nuevo concepto en E-comerce. <br />
+		 El medio, donde pequeños vendedores pueden darse a conocer, y crecer, sin la competencia de los grandes en la industria. <br />
+		Contamos con rigurosos controles de calidad, los cuales aseguran y respaldan todos los productos que vas a encontrar. Personalizacion, calidad y responsabilidad
+		nos caracterizan. Te invitamos a conocernos un poco mas...
 	</p>
 
 	<div>
-		<h2 class="fw-bold text-center">Nuestro equipo</h2>
-		<p>
-			<p>
-				<hr />
-			</p>
-		</p>
+		<h2 class="fw-bold text-center nuestro-equipo mb-4">Nuestro equipo</h2>
 	</div>
 
 
-	<div>
-
-		
-	</div>
-
+	
 
 	<section class="d-flex justify-content-center flex-wrap   col-12 col-sm-12" >
 
@@ -96,14 +90,16 @@
 
 			<div>
 				<p class="card-title fw-semibold text-center fs-5"> Maria</p>
-				<img src="../Image/maria.png" class="card-img-top" alt="...">
+				<img src="../image/maria.jpg" class="card-img-top" title="maria" alt="maria">
 				<div class="card-body">
-					<p class="card-text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, dolore
-						corporis! Vitae assumenda, architecto magnam eveniet modi sed iusto id.</p>
+					<p class="card-text"> <b>Co-fundador.</b> <br />
+						Marketing Manager	<br />
+						Administracion Redes<br />
+						Licenciada en Administracion de empresas. Parte del equipo de gestion, desde los comienzos de LLeva y trae.
+
+					</p>
 				</div>
 			</div>
-
-
 		</div>
 
 
@@ -112,17 +108,17 @@
 			<div>
 				<div>
 					<p class="card-title fw-semibold text-center fs-5"> Juan</p>
-					<img src="../Image/maria.png" class="card-img-top" alt="...">
+					<img src="../image/juan.png" class="card-img-top" title="juan" alt="juan">
 					<div class="card-body ">
-						<p class="card-text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, dolore
-							corporis! Vitae assumenda, architecto magnam eveniet modi sed iusto id.</p>
+						<p class="card-text"> 
+							<b> CEO.</b> <br />
+							Technology Officer	<br />
+						Desarrollo y Gestion<br />
+						Acompañando a Lleva y Trae desde el año pasado, resposable del nuevo posicionamiente de la empresa.
+						</p>
 					</div>
 				</div>
 			</div>
-
-
-
-
 		</div>
 
 
@@ -131,68 +127,62 @@
 			<div>
 				<p class="card-title fw-semibold text-center fs-5"> Bruno
 				</p>
-				<img src="../Image/maria.png" class="card-img-top" alt="...">
+				<img src="../image/bruno.jpg" class="card-img-top" title="bruno" alt="bruno">
 				<div class="card-body">
-					<p class="card-text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, dolore
-						corporis! Vitae assumenda, architecto magnam even
+					<p class="card-text"> 
+						<b> Finance Manager</b> <br />
+							Economista.	<br />
+							Relaciones publicas.<br />
+							La cara visible y el encargado de la economia de Lleva y Trae
+					</p>
 				</div>
 
-				iet modi sed iusto id.</p>
+				
 			</div>
 		</div>
-		<!-- 
-		<li>Maria</li>
-		<li>Juan</li>
-		<li>Martin</li>
-		<li>Victoria</li>
-		<li>Esteban</li>
-		<li>Melisa</li> -->
+		
 	</section>
 
 	<div>
 
 		<h2 class="fw-bold text-center mt-5">¿Como nacio Lleva y trae?</h2>
-		<p class="border border-dark border-2 opacity-50">
-			<hr />
-		</p>
+		<!-- <p class="border border-dark border-2 opacity-50"> ------------ Mati disculpa, se que no es el mejor lugar para preguntar, pero
+			<hr />                                                           yo queria usar una linea separadora de punta a punta, 
+																			esta forma era valida?
+		</p> -->                                                             
 	</div>
 
 	<div class="conteiner">
 		<div class="row mt-5">
 			<div class="col-6 col-sm-12">
-				<h2 class="fw-normal text-center mb-2">Camino a los 10 años en el mercado</h2>
-				<p class="mt-4 m-p"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit beatae quisquam
-					reprehenderit fugiat atque fuga
-					voluptatem iure unde, explicabo cumque libero nulla nemo facilis, delectus ratione! Qui dolore sint
-					neque?
+				<h2 class="fw-normal text-center mb-2"><ins>Camino a los 10 años en el mercado</ins> </h2>
+				<p class="mt-4 m-p"> Fundada en 2013, Lleva y Trae, esta por cumplir sus 10 años en el mercado. Con mas de 1.000.000 de usuarios activos, y el mejor precio del mercado. Calidad y precio, asegurado
+					Nuestra historia esta construida sobre las bases de la mejora continua y el aprendizaje de los errores. Nuestro pasado, define nuestro presente, y las acciones de hoy,
+					seran los frutos del futuro.
 				</p>
 			</div>
 
 
 			<div class="col-6 col-sm-12">
-				<h2 class="fw-normal text-center mb-2">¿Qué queremos lograr?</h2>
-				<p class="mt-4 m-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum quaerat hic pariatur!
-					Hic, excepturi labore
-					nemo dolore esse ad saepe fugit at magnam. Eos ex, vero ipsam non officia tempora!</p>
+				<h2 class="fw-normal text-center mb-2"><ins>¿Qué queremos lograr?</ins> </h2>
+				<p class="mt-4 m-p">
+					Convertirnos en el E-comerce, basado en tecnologia BlockChain mas rapido, descentralizado y seguro del mercado.
+					La innovacion tecnologica es una de las bases sobre la cual LLeva y Trae fue fundada. Continuamos con la constante busqueda de agregar valor a lo que hacemos. <br />
+					La optimizacion de los recursos, la seguridad, y el libre mercado, son los pilares que nos acompañan en cada paso.
+				</p>
 			</div>
 
 			<div class="col-12 col-sm-12">
-				<h2 class="fw-normal text-center mb-2">Mision, Vision y Valores</h2>
-				<p class="mt-4 m-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse fugiat voluptatibus
-					aperiam facere tempora!
-					Provident, nemo officiis. Enim tempore placeat natus odio perspiciatis suscipit aliquid. Ex est
-					libero esse
-					natus?</p>
+				<h2 class="fw-normal text-center mb-2"><ins>Mision, Vision y Valores</ins> </h2>
+				<p class="mt-4 m-p"> Ser la empresa reconocida como líder en compra, venta y distribucion de productos, a nivel mundial por parte de sus consumidores,
+					 empleados, clientes, proveedores y todos los grupos de interés relacionados con la actividad de la compañía.</p>
 			</div>
 
 		</div>
 	</div>
 
 
-
-
-	
-	<footer class="footer">
+	<footer class="footer justify-content-center">
 		<div class="div-wpp">
 			<p class="texto-wpp">291-12345678</p>
 			<img src="../image/whatsapp.png" alt="whatsapp" class="img-wpp">
