--- a/secciones/quienes-somos.html
+++ b/secciones/quienes-somos.html
@@ -9,20 +9,17 @@
 	<meta name="description" content="Encontra en nuestra pagina, todos los productos que hacen a tu felicidad">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-		<link rel="stylesheet" href="css/responsive-480px.css">
-	<link rel="stylesheet" href="css/responsive-1524px.css">
-	<link rel="stylesheet" href="css/responsive-711px.css">
 	<link rel="stylesheet" href="../css/estilos2.css">
 	<title>Lleva y trae</title>
 </head>
 
 <body>
-	
+
 
 	<nav class="navegador">
 		<div class="logo mx-auto d-block text-center d-none d-sm-none d-md-block">
 			<h1 class="fs-5 p-0 m-0 small fw-light">Quienes Somos</h1>
-			<a href="../index.html"><img src="../image/envio.png" title="envio" alt="envio" class="img-envio"></a> 
+			<a href="../index.html"><img src="../image/envio.png" title="envio" alt="envio" class="img-envio"></a>
 		</div>
 
 		<div class="titulo">
@@ -71,8 +68,10 @@
 	</div>
 
 	<p class="m-p">LLeva y Trae es un nuevo concepto en E-comerce. <br />
-		 El medio, donde pequeños vendedores pueden darse a conocer, y crecer, sin la competencia de los grandes en la industria. <br />
-		Contamos con rigurosos controles de calidad, los cuales aseguran y respaldan todos los productos que vas a encontrar. Personalizacion, calidad y responsabilidad
+		El medio, donde pequeños vendedores pueden darse a conocer, y crecer, sin la competencia de los grandes en la
+		industria. <br />
+		Contamos con rigurosos controles de calidad, los cuales aseguran y respaldan todos los productos que vas a
+		encontrar. Personalizacion, calidad y responsabilidad
 		nos caracterizan. Te invitamos a conocernos un poco mas...
 	</p>
 
@@ -81,9 +80,9 @@
 	</div>
 
 
-	
 
-	<section class="d-flex justify-content-center flex-wrap   col-12 col-sm-12" >
+
+	<section class="d-flex justify-content-center flex-wrap   col-12 col-sm-12">
 
 
 		<div class="card bg-secondary mb-5 ms-5 me-5" style="width: 18rem;">
@@ -93,9 +92,10 @@
 				<img src="../image/maria.jpg" class="card-img-top" title="maria" alt="maria">
 				<div class="card-body">
 					<p class="card-text"> <b>Co-fundador.</b> <br />
-						Marketing Manager	<br />
+						Marketing Manager <br />
 						Administracion Redes<br />
-						Licenciada en Administracion de empresas. Parte del equipo de gestion, desde los comienzos de LLeva y trae.
+						Licenciada en Administracion de empresas. Parte del equipo de gestion, desde los comienzos de
+						LLeva y trae.
 
 					</p>
 				</div>
@@ -110,11 +110,12 @@
 					<p class="card-title fw-semibold text-center fs-5"> Juan</p>
 					<img src="../image/juan.png" class="card-img-top" title="juan" alt="juan">
 					<div class="card-body ">
-						<p class="card-text"> 
+						<p class="card-text">
 							<b> CEO.</b> <br />
-							Technology Officer	<br />
-						Desarrollo y Gestion<br />
-						Acompañando a Lleva y Trae desde el año pasado, resposable del nuevo posicionamiente de la empresa.
+							Technology Officer <br />
+							Desarrollo y Gestion<br />
+							Acompañando a Lleva y Trae desde el año pasado, resposable del nuevo posicionamiente de la
+							empresa.
 						</p>
 					</div>
 				</div>
@@ -129,18 +130,18 @@
 				</p>
 				<img src="../image/bruno.jpg" class="card-img-top" title="bruno" alt="bruno">
 				<div class="card-body">
-					<p class="card-text"> 
+					<p class="card-text">
 						<b> Finance Manager</b> <br />
-							Economista.	<br />
-							Relaciones publicas.<br />
-							La cara visible y el encargado de la economia de Lleva y Trae
+						Economista. <br />
+						Relaciones publicas.<br />
+						La cara visible y el encargado de la economia de Lleva y Trae
 					</p>
 				</div>
 
-				
+
 			</div>
 		</div>
-		
+
 	</section>
 
 	<div>
@@ -149,15 +150,17 @@
 		<!-- <p class="border border-dark border-2 opacity-50"> ------------ Mati disculpa, se que no es el mejor lugar para preguntar, pero
 			<hr />                                                           yo queria usar una linea separadora de punta a punta, 
 																			esta forma era valida?
-		</p> -->                                                             
+		</p> -->
 	</div>
 
 	<div class="conteiner">
 		<div class="row mt-5">
 			<div class="col-6 col-sm-12">
 				<h2 class="fw-normal text-center mb-2"><ins>Camino a los 10 años en el mercado</ins> </h2>
-				<p class="mt-4 m-p"> Fundada en 2013, Lleva y Trae, esta por cumplir sus 10 años en el mercado. Con mas de 1.000.000 de usuarios activos, y el mejor precio del mercado. Calidad y precio, asegurado
-					Nuestra historia esta construida sobre las bases de la mejora continua y el aprendizaje de los errores. Nuestro pasado, define nuestro presente, y las acciones de hoy,
+				<p class="mt-4 m-p"> Fundada en 2013, Lleva y Trae, esta por cumplir sus 10 años en el mercado. Con mas
+					de 1.000.000 de usuarios activos, y el mejor precio del mercado. Calidad y precio, asegurado
+					Nuestra historia esta construida sobre las bases de la mejora continua y el aprendizaje de los
+					errores. Nuestro pasado, define nuestro presente, y las acciones de hoy,
 					seran los frutos del futuro.
 				</p>
 			</div>
@@ -166,16 +169,21 @@
 			<div class="col-6 col-sm-12">
 				<h2 class="fw-normal text-center mb-2"><ins>¿Qué queremos lograr?</ins> </h2>
 				<p class="mt-4 m-p">
-					Convertirnos en el E-comerce, basado en tecnologia BlockChain mas rapido, descentralizado y seguro del mercado.
-					La innovacion tecnologica es una de las bases sobre la cual LLeva y Trae fue fundada. Continuamos con la constante busqueda de agregar valor a lo que hacemos. <br />
-					La optimizacion de los recursos, la seguridad, y el libre mercado, son los pilares que nos acompañan en cada paso.
+					Convertirnos en el E-comerce, basado en tecnologia BlockChain mas rapido, descentralizado y seguro
+					del mercado.
+					La innovacion tecnologica es una de las bases sobre la cual LLeva y Trae fue fundada. Continuamos
+					con la constante busqueda de agregar valor a lo que hacemos. <br />
+					La optimizacion de los recursos, la seguridad, y el libre mercado, son los pilares que nos acompañan
+					en cada paso.
 				</p>
 			</div>
 
 			<div class="col-12 col-sm-12">
 				<h2 class="fw-normal text-center mb-2"><ins>Mision, Vision y Valores</ins> </h2>
-				<p class="mt-4 m-p"> Ser la empresa reconocida como líder en compra, venta y distribucion de productos, a nivel mundial por parte de sus consumidores,
-					 empleados, clientes, proveedores y todos los grupos de interés relacionados con la actividad de la compañía.</p>
+				<p class="mt-4 m-p"> Ser la empresa reconocida como líder en compra, venta y distribucion de productos,
+					a nivel mundial por parte de sus consumidores,
+					empleados, clientes, proveedores y todos los grupos de interés relacionados con la actividad de la
+					compañía.</p>
 			</div>
 
 		</div>
@@ -195,7 +203,7 @@
 			<p class="texto-insta">/Llevaytrae</p>
 			<img src="../image/instagram.png" alt="instagram" class="img-insta">
 		</div>
-	</footer>	
+	</footer>
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous">
