optimizacion de codigo - entrega final

--- a/secciones/preguntas-frecuentes.html
+++ b/secciones/preguntas-frecuentes.html
@@ -50,10 +50,7 @@
 				<label class="btn btn-outline-dark" for="btnradio3">
 					<a href="preguntas-frecuentes.html" class="text-decoration-none text-reset">Preguntas Frecuentes</a>
 				</label>
-
-
 			</div>
-
 		</div>
 
 		<div class="buscador d-none d-sm-none d-md-block">
@@ -63,21 +60,16 @@
 		</div>
 	</nav>
 
-
-
 	<div class="container">
 		<div class="row mt-3">
 
 			<div class="mt-3 mb-2 col-12 col-md-6 col-lg-12">
 				<h2 class="fw-bold text-center mt-1"><ins>¿Todos los productos cuentan con garantia?</ins></h2>
-
 				<p class="m-p">La respuesta es si. Absolutamente todos los productos que vas a encontrar en nuestra
 					pagina,
 					cuentan con una garantia oficial brindada por los mismos productores, debido a que es un requisito
 					escencial para que cualquier emprendedor pueda vender en nuestro sitio.
 			</div>
-
-
 
 			<div class="mt-3 mb-2 col-12 col-md-6 col-lg-4">
 				<h2 class="fw-bold text-center mb-4"><ins>Contrata garantia +Plus duarente 1 año</ins> </h2>
@@ -88,7 +80,6 @@
 						class="text-decoration-none text-reset"><b><i>Contacto</i></b></a>
 			</div>
 
-
 			<div class="mt-3 mb-2 col-12 col-lg-4">
 				<h2 class="fw-bold text-center mb-4"><ins>Si mi pedido no llego ¿Que hago?</ins> </h2>
 
@@ -96,48 +87,39 @@
 					tardado mas de 24hs de las estimadas,
 					recomendamos iniciar el reclamo mediante nuestra pagina de <a href="/secciones/contacto.html"
 						class="text-decoration-none text-reset"><b><i>Contacto</i></b></a>
-
 			</div>
-
 
 			<div class="mt-3 mb-2 col-12 col-md-6 col-lg-4">
 				<h2 class="fw-bold text-center mb-4"><ins>¿Como iniciar un reclamo?</ins> </h2>
-
-
 				<p class="m-p">
-					A traves de la pagina de Contacto, podras iniciar tu reclamo, en el cual deberas especificar, el motivo del mismo,
-					y deberas ingresar tu codigo de seguimiento. De esta manera podremos darte una informacion mas rapida y exacta sobre la localizacion
+					A traves de la pagina de Contacto, podras iniciar tu reclamo, en el cual deberas especificar, el
+					motivo del mismo,
+					y deberas ingresar tu codigo de seguimiento. De esta manera podremos darte una informacion mas
+					rapida y exacta sobre la localizacion
 					de tu pedido.
 			</div>
-
-
 
 			<div class="mt-3 mb-2 col-12 col-md-6 col-lg-6">
 				<h2 class="fw-bold text-center mb-4"><ins>¿Ya esta disponible la opcion de pago con Criptomonedas?</ins>
 				</h2>
-
-
-				<p class="m-p">Si! A partir de comienzos de este año, ya esta habilitada la opcion de pago mediante Criptos. Cada vendedor
+				<p class="m-p">Si! A partir de comienzos de este año, ya esta habilitada la opcion de pago mediante
+					Criptos. Cada vendedor
 					tiene la libertad de elegir que Criptomonedas aceptar en su comercio ademas de las StableCoins.
-
 			</div>
-
 
 			<div class="mt-3 mb-2 d-none d-sm-none d-md-none d-lg-flex col-lg-6 div-img-cripto">
 				<img class="img-cripto" src="../image/criptomoneda.png" title="criptomonedas" alt="criptomonedas">
 
 			</div>
 
-
-
 			<div class="mt-3 mb-2 col-12">
 				<h2 class="fw-bold text-center">¿Te gustaria sumarte al equipo de <b>LLeva y Trae</b>?</h2>
-				<p class="m-p">Si estas interesado en saber mas sobre nosotros, o quizieras formar parte de nuestro equipo, dejanos saberlo, dejando 
+				<p class="m-p">Si estas interesado en saber mas sobre nosotros, o quizieras formar parte de nuestro
+					equipo, dejanos saberlo, dejando
 					un mensaje la pagina de Contacto. Via E-Mail, hacenos llegar tu CV actualizado.
 			</div>
 		</div>
 	</div>
-
 
 	<footer class="footer justify-content-center">
 		<div class="div-wpp">
