--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -14,17 +14,15 @@
 </head>
 
 <body>
-
 	<nav class="navegador">
 		<div class="logo mx-auto d-block text-center d-none d-sm-none d-md-block">
 			<h1 class="fs-5 p-0 m-0 small fw-light">Productos</h1>
-			<a href="../index.html"><img src="../image/envio.png" alt="envio" title="img-envio" class="img-envio"></a> 
+			<a href="../index.html"><img src="../image/envio.png" alt="envio" title="img-envio" class="img-envio"></a>
 		</div>
 
 		<div class="titulo">
 			<h2>Lleva y Trae</h2>
 		</div>
-
 
 		<div class="menu d-flex align-items-center">
 			<div class="btn-group" role="group" aria-label="Basic radio toggle button group">
@@ -52,10 +50,7 @@
 				<label class="btn btn-outline-dark" for="btnradio3">
 					<a href="preguntas-frecuentes.html" class="text-decoration-none text-reset">Preguntas Frecuentes</a>
 				</label>
-
-
 			</div>
-
 		</div>
 
 		<div class="buscador d-none d-sm-none d-md-block">
@@ -65,11 +60,7 @@
 		</div>
 	</nav>
 
-
-
 	<main class="grid-main-productos">
-
-
 		<div class="titulo-categoria mt-4 d-none d-sm-none d-md-none d-lg-flex justify-content-center">
 			<h2 class="my-5">
 				<p> Categorias </p>
@@ -136,7 +127,7 @@
 						</div>
 					</div>
 				</div>
-				
+
 
 				<div class="card mb-3 productos-area" style="max-width: 540px;">
 					<div class="row g-0">
@@ -162,7 +153,8 @@
 				<div class="card mb-3 productos-area" style="max-width: 540px;">
 					<div class="row g-0">
 						<div class="col-md-4 d-flex align-items-center">
-							<img src="../image/notebook.png" class="img-fluid rounded-start" title="notebook" alt="notebook">
+							<img src="../image/notebook.png" class="img-fluid rounded-start" title="notebook"
+								alt="notebook">
 						</div>
 						<div class="col-md-8">
 							<div class="card-body">
@@ -207,16 +199,8 @@
 						</div>
 					</div>
 				</div>
-
-
-
-
-
 			</div>
-
 		</div>
-
-
 	</main>
 
 	<footer class="footer justify-content-center">
@@ -234,12 +218,8 @@
 		</div>
 	</footer>
 
-
-
-
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous">
 	</script>
 </body>
-
 </html>
